--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -70,7 +70,7 @@
         }
         body:lang(he) {
             font-family: "Arial Hebrew", sans-serif;
-            letter-spacing: 0.8px;
+            letter-spacing: 1.0px;
         }
     </style>
 </head>
@@ -143,7 +143,7 @@
                 </nav>
 
                 <div class="header__actions row">
-                    <a href="/blog/en/page/contactus" class="button">@Model.Value("getInTouch")</a>
+                    <a href="/blog/en/page/contactus" class="button" style="@(currentLangCode == "he" ? "letter-spacing: 1.2px;" : "")" >@Model.Value("getInTouch")</a>
                 </div>
             </div>
         </div>
@@ -174,7 +174,7 @@
                         </a>
 
                     <div class="header__actions row">
-                        <a href="/blog/en/page/contactus" class="button">@Model.Value("getInTouch")</a>
+                        <a href="/blog/en/page/contactus" class="button" style="@(currentLangCode == "he" ? "letter-spacing: 1.2px;" : "")">@Model.Value("getInTouch")</a>
                     </div>
                 </div>
             </div>
@@ -295,10 +295,10 @@
                             <p>@Model.Value("profichat")</p>
                             <div class="buttons">
                                 @if(currentLangCode == "he"){
-                                <a href="https://www.profichat.net/he" class="button button--dark">@Model.Value("learnMore")</a>
+                                <a href="https://www.profichat.net/he" class="button button--dark" style="@(currentLangCode == "he" ? "letter-spacing: 1.2px;" : "")">@Model.Value("learnMore")</a>
                                 }
                                 else{
-                                <a href="https://www.profichat.net" class="button button--dark">@Model.Value("learnMore")</a>
+                                <a href="https://www.profichat.net" class="button button--dark" style="@(currentLangCode == "he" ? "letter-spacing: 1.2px;" : "")" >@Model.Value("learnMore")</a>
                                 }
                             </div>
                         </div>
@@ -310,10 +310,10 @@
                             <p>@Model.Value("zmenu")</p>
                             <div class="buttons">
                                 @if(currentLangCode == "he"){
-                                    <a href="https://www.zmenu.net/he" class="button button--dark">@Model.Value("learnMore")</a>
+                                    <a href="https://www.zmenu.net/he" class="button button--dark" style="@(currentLangCode == "he" ? "letter-spacing: 1.2px;" : "")">@Model.Value("learnMore")</a>
                                 }
                                 else{
-                                    <a href="https://www.zmenu.net" class="button button--dark">@Model.Value("learnMore")</a>
+                                    <a href="https://www.zmenu.net" class="button button--dark" style="@(currentLangCode == "he" ? "letter-spacing: 1.2px;" : "")">@Model.Value("learnMore")</a>
                                 }
                             </div>
                         </div>
@@ -324,9 +324,9 @@
                             <h3>Mekashron CRM</h3>
                             <p>@Model.Value("crm")</p>
                             <div class="buttons">
-                                <a href="download/callcenterV7" class="button button--accent">@Model.Value("downloadButton")</a>
+                                <a href="download/callcenterV7" class="button button--accent" style="@(currentLangCode == "he" ? "letter-spacing: 1.2px;" : "")">@Model.Value("downloadButton")</a>
                                 @*<a href="/blog/@currentLangCode" class="link">@Model.Value("learnMore")</a>*@
-                                <a href="/blog/en/page/Call-Center-CRM" class="link">@Model.Value("learnMore")</a>
+                                <a href="/blog/en/page/Call-Center-CRM" class="link" style="@(currentLangCode == "he" ? "letter-spacing: 1.2px;" : "")">@Model.Value("learnMore")</a>
 
                             </div>
                         </div>
@@ -365,7 +365,7 @@
                         <p style="@(currentLangCode == "he" ? "text-align: right;" : "text-align: left;")">
                             @Model.Value("description")
                         </p>
-                        <a href="/blog/en/page/about-us" class="button button--accent">@Model.Value("aboutUs")</a>
+                        <a href="/blog/en/page/about-us" class="button button--accent" style="@(currentLangCode == "he" ? "letter-spacing: 1.2px;" : "")">@Model.Value("aboutUs")</a>
                     </div>
                 </div>
             </div>
@@ -375,7 +375,7 @@
             <div class="container">
                 <h2 style="text-align: center;">@Model.Value("readyToBuild")</h2>
                 <p style="text-align: center;">@Model.Value("tellUs")</p>
-                <a href="/blog/en/page/contactus" class="button">@Model.Value("getInTouch")</a>
+                <a href="/blog/en/page/contactus" class="button" style="@(currentLangCode == "he" ? "letter-spacing: 1.2px;" : "")">@Model.Value("getInTouch")</a>
             </div>
         </section>
     </main>
