--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -72,6 +72,11 @@
             font-family: "Arial Hebrew", sans-serif;
             letter-spacing: 1.0px;
         }
+         @@media (max-width: 768px) {
+            .header__actions .button:lang(he) {
+                margin-right: 80px; !important;
+            }
+        }
     </style>
 </head>
 
@@ -394,7 +399,7 @@
                         @:<text>Mekashron</text>
                         }
                         </a>
-                    <p>
+                    <p style="@(currentLangCode == "he" ? "text-align: right" : "text-align: left")">
                         @Html.Raw(Model.Value("footerText"))
                     </p>
                 </div>
