--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -294,7 +294,7 @@
                 <div class="column">
                     <div class="footer__actions">
                         <nav class="footer__nav">
-                            <ul class="footer__nav--list">
+                            <ul class="footer__nav--list" style="margin-right:-40px; float: right">
                                 <li class="menu-item">
                                     <a href="/blog/en/page/jobs">@Model.Value("jobs")</a>
                                 </li>
