--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -43,7 +43,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="description" content="Custom AI software, CRM systems, SaaS platforms, and enterprise solutions. Mekashron brings 20+ years of development experience to scalable, secure, and reliable digital products">
     <title>@Model.Value("titleText")</title>
-    <link rel="icon" type="image/png" href="/assets/images/favicon.png">
+    <link rel="icon" type="image/png" href="/assets/images/favicon.png?v=2">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
