--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -44,7 +44,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
     <title>Mekashron</title>
-    <link rel="icon" type="image/png" href="/assets/images/favicon.png">
+    <link rel="icon" type="image/png" href="/assets/images/favicon.png?v=2">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Hebrew:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
