--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -274,7 +274,7 @@
                 @if (currentLangCode == "en")
                 {
                     <div style="text-align: center;">
-                        If you have any questions, feel free to <a class="content-link" target="_blank" href="https://www.mekashron.com/blog/en/page/contactus">Contact us</a> for Support and queries. While you are waiting for download to be finished, We recommend you review our <a class="content-link" href="https://mekashron.com/blog/en/" target="_blank">user guide</a>.
+                        If you have any questions, feel free to <a class="content-link" target="_blank" href="https://www.mekashron.com/blog/en/page/contactus">Contact us</a> for Support and queries. While you are waiting for download to be finished, We recommend you review our <a class="content-link" href="https://www.mekashron.com/blog/en/" target="_blank">user guide</a>.
                     </div>
                     <p style="text-align: center; color: #800000;">
                         If your download does not start within 5 seconds, <a class="content-link" ng-href="https://files-s.mekashron.com/mekashron{{vm.fileKey}}.exe">click here</a>.
