--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -52,7 +52,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Space+Grotesk:wght@300..700&display=swap"
         rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="/assets/css/style.css?v=291225">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
@@ -72,8 +74,10 @@
             text-align: left;
         }
         body:lang(he) {
-            font-family: "Arial Hebrew", sans-serif;
+            font-family: "Heebo", sans-serif;
             letter-spacing: 1.0px;
+            font-optical-sizing: auto;
+            font-style: normal;
         }
         @@media (max-width: 768px) {
             .header__actions .button:lang(he) {
