--- a/Views/Home.cshtml
+++ b/Views/Home.cshtml
@@ -578,5 +578,6 @@
 <script src="/assets/js/swiper-bundle.min.js"></script>
 <script src="/assets/js/select.js"></script>
 <script src="/assets/js/scripts171225.js"></script>
+<script defer data-domain="mekashron.com" src="https://analytics.mekashron.com/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"></script>
 </body>
 </html>
