--- a/Views/Download.cshtml
+++ b/Views/Download.cshtml
@@ -540,5 +540,6 @@
     })();
 
 </script>
+<script defer data-domain="mekashron.com" src="https://analytics.mekashron.com/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"></script>
 </body>
 </html>
