--- a/Views/ThankYou.cshtml
+++ b/Views/ThankYou.cshtml
@@ -477,5 +477,6 @@
             }]);
     })();
 </script>
+<script defer data-domain="mekashron.com" src="https://analytics.mekashron.com/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"></script>
 </body>
 </html>
